--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@
 name = "getsecure"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Utility for securing expiring links"
 
 [dependencies]
 md5 = "0.7.0"
